# ptop

./: pyproject.toml
src/ptop/: main.py
